--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
   <!-- your web page content goes here -->
 
   <div class="topbar">
+    <a href="#" class="link">About me</a>
     <a href="#" class="link">Education</a>
     <a href="#" class="link">Experience</a>
     <a href="#" class="link">Skills</a> 
@@ -53,28 +54,32 @@
 
 
   <div class="content">
-    <h1> Hi! I'm trying to test my colors here! </h1>
-    <p> I want some text </p>
-    <p> This is real text, meant to be longer than the other. I want to see how
-      it looks like in a "long" paragraph. This is text. This is also text. More text
+    <h1>About me</h1>
+    <p> 
+      Hi! I'm a physicist who enjoys learning and creating. I love to explore very 
+      diferent topics: computer science (coding, homelabbing, linux),
+      artistic (music), handcrafting (knitting and sewing), learning languages 
+      (english and german)... 
     </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
-    <p> I want some text </p>
+    <p>  
+      I'm also interested in knowing diferent cultures, living in diferent places and
+      getting to practice more foreign languages. I look forward to work in an environment that allows me to learn from multiple
+      areas of expertise.
+    </p>
+
+    <h1> Education </h1>
+    <p>
+      Degree in Physics in the University of Santiago de Compostela
+      <ul>
+        <li><span class="li-bald">Relevant academic training:</span> 
+        
+        </li>
+        <li><span class="li-bald">Skills:</span>
+        
+        </li>
+      </ul>
+    </p>
+
   </div>
 
 
