Rewritten layout using grid and flexbox

--- a/Index.html
+++ b/Index.html
@@ -15,114 +15,86 @@
 
   <div id="container">
   
+    <!-- SIDEBAR -->
     <div class="sidebar">
       
       <div id="center-content">
-      <img src="diego.jpg" width="200px" alt="foto Diego">
-      </div>
-
-      <div class="info-text">
-      <p id="name"> Diego Couto García </p>
-      <p id="info"> 
-        mail@diegocoutogarcia.com 
-        <br> Santiago de Compostela
-      </p>
+        <img class="photo" src="diego.jpg" width="200px" alt="foto Diego">
       </div>
 
       <div>
-      <hr class="solid">
+        <p id="name"> Diego Couto García </p>
 
-      <p id="text">
-        I'm a physicist interested in computer sciences, linux, open source and homelabbing
-      </p>
-
-      <p id="text"> Currenty studying the last year of my Physics degree in
-        Santiago de Compostela.
-      </p>
-
-      <hr class="solid">
+        <p id="info"> 
+          mail@diegocoutogarcia.com 
+          <br> Santiago de Compostela
+        </p>
       </div>
 
-      <div id="center-content">
-      <p> links </p>
-      <p> download pdf</p>
+      <div>
+        <hr class="solid">
+        <p>I'm a physicist interested in computer 
+          sciences, linux, open source and homelabbing.</p>
+
+        <p>Currenty studying the last year of my Physics degree in
+          Santiago de Compostela.</p>
+        <hr class="solid">
       </div>
+
+      <div class="logos-grid">
+        <a href="https://linkedin.com" class="logo">
+          <img class="logo" src="linkedin.svg" width="25px" alt="Linkedin logo">
+        </a>
+
+        <a href="https://github.com/dcoutogarcia" class="logo">
+          <img class="logo" src="github.svg" width="25px" alt="Linkedin logo">
+        </a>
+    
+        <a href="DiegoCouto-CV.pdf" class="logo">
+          <img class="pdf" src="pdf.svg" width="25px" alt="PDF"> Download PDF
+        </a>
+      </div>
+
     </div>
 
-    <div class="item two">
-      Text2
+    <!-- TOPBAR -->
+    <div class="topbar">
+      <a href="#" class="link">About me</a>
+      <a href="#" class="link">Education</a>
+      <a href="#" class="link">Experience</a>
+      <a href="#" class="link">Skills</a>
+      <a href="#" class="link">Hobbies</a>
+      <a href="#" class="link">Projects</a>
+      <a href="#" class="language">Página en español</a>
     </div> 
 
-    <div class="three"> 
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p> 
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
-      <p> Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-        Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders
-      Estúpido flanders Estúpido flanders Estúpido flanders Estúpido flanders </p>
+    <div class="main-content"> 
+      <h1>Test title</h1>
+      <p>Test text</p>
+
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+
+Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.   
+
+Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.   
+
+Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.   
+
+Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.   
+
+At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
+
+<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+
+Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.   
+
+Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.   
+
+Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.   
+
+Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.   
+
+At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
     </div> 
   
   </div>
