Fixed broken hyperlink

--- a/webpage/spanish.html
+++ b/webpage/spanish.html
@@ -65,7 +65,7 @@
       <a href="#" class="link">Habilidades</a>
       <a href="#" class="link">Hobbies</a>
       <a href="#" class="link">Proyectos</a>
-      <a href="Index.html" class="language">Webpage in English</a>
+      <a href="index.html" class="language">Webpage in English</a>
     </div> 
 
     <div class="main-content"> 
