Added personal info without style for both languages

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -60,41 +60,112 @@
     <!-- TOPBAR -->
     <div class="topbar">
       <a href="#" class="link">About me</a>
+      <a href="#" class="link">Projects</a>
       <a href="#" class="link">Education</a>
       <a href="#" class="link">Experience</a>
       <a href="#" class="link">Skills</a>
-      <a href="#" class="link">Hobbies</a>
-      <a href="#" class="link">Projects</a>
       <a href="spanish.html" class="language">Página en español</a>
     </div> 
 
     <div class="main-content"> 
-      <h1>Test title</h1>
-      <p>Test text</p>
 
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+      <h1 id="about-me">About me</h1>
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.   
+        <p>I'm a Physics student passioned for Computer Sciences. I've been using Linux
+          daily for the last 7 years, and I'm used to its inner workings and the use 
+          of the terminal.</p>
 
-Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.   
+        <p>I enjoy programming and homelabbing. This webpage it's made and selfhosted my 
+          me. I also have multiple services for personal use (ex. Nextcloud).</p>
 
-Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.   
+        <p>I'm also passionate about other fields, like music. I love learning new
+          things and perfecting skills.</p>
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.   
+      <h1 id="projects">Projects</h1>
 
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
+        <ul>
+          <li>Astranet: forum for the community of a Philosophy club. 
+            Built on Discourse (using Docker) y hosted on a personal computer
+            using Cloudflare.
+          </li>
 
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+          <li>
+            CV-Webpage: this webpage. Thought as a project to learn web design, HTML
+            and CSS
+          </li>
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.   
+          <li>
+            Momentum Magazine: faculty's magazine (Física USC). Editing of articles in LaTeX.
+          </li>
+        </ul>
 
-Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.   
+      <h1 id="education">Education</h1>
 
-Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.   
+        <h2>University</h2>
+        <ul>
+          <li>Degree in Physics in Universidade de Santiago de Compostela (2021-2026).
+            <br>(Currently finishing my Undergraduate Thesis).
+          </li>
+          
+          <li>
+            Undergraduate Thesis: Study of the dynamics of cavities similar to the 
+            utricle in diagnostic manouvers in otorhinolaryngology. Simulations 
+            of the Inner Ear in Star-CCM+.
+          </li>
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.   
+        </ul>
 
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
+        <h2>Languages</h2>
+        <ul>
+          <li>Spanish: native.</li>
+          <li>Galician: native.</li>
+          <li>English: currently preparing the title C1 in Cambridge.</li>
+          <li>German: currently studying a A2 course.</li>
+        </ul>
+
+        <h2>Courses</h2>
+        <ul>
+          <li>Quantum Computing (Feb-Mar 2025). 5th place in the HaQaton.</li>
+          <li>LaTeX Course (March 2022).</li>
+          <li>A1 German Course (2025) in the Escola de Linguas Modernas, USC.</li>
+        </ul>
+
+      <h1 id="experience">Experience</h1>
+      <ul>
+        <li>Internship in Eptisa A Coruña (Jun-Jul 2025).
+          <br>Route Optimization for Garbage Trucks using Machine Learning algorithms.
+          Coordination of the Project.
+        </li>
+      </ul>
+
+      <h1 id="skills">Habilidades</h1>
+        <ul>
+          <li>
+            Linux (7 years of experience). Advanced terminal usage. Basic knowledge of 
+            system administration
+          </li>
+
+          <li>
+            Docker (used in my homeserver an in Astranet), git and Github (Momentum Magazine).
+          </li>
+
+          <li>LaTeX and Typst (Momentum Magazine).</li>
+
+          <li>Office and Excel.</li>
+
+          <li>
+            Advanced knowledge of Python. Data Analysis, Machine Learning.
+          </li>
+
+          <li>Experience in Fortran coding simulations.</li>
+
+          <li>Experience on fluid simulation in Star-CCM+.</li>
+
+        </ul>
+
+        
+    </div> 
+  
     </div> 
   
   </div>
