Added hyperlinks to the projects.

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -84,9 +84,9 @@
       <h1 id="projects">Projects</h1>
 
         <ul>
-          <li>Astranet: forum for the community of a Philosophy club. 
-            Built on Discourse (using Docker) y hosted on a personal computer
-            using Cloudflare.
+          <li><a href="https://astranet.clubeastra1.com">Astranet</a>: forum for the community 
+            of a Philosophy club. Built on <a href="https://discourse.org">Discourse</a>
+            (using Docker) y hosted on a personal computer using Cloudflare.
           </li>
 
           <li>
@@ -95,7 +95,8 @@
           </li>
 
           <li>
-            Momentum Magazine: faculty's magazine (Física USC). Editing of articles in LaTeX.
+            <a href="https://github.com/fisicaUSC/revista">Momentum Magazine</a>: 
+            faculty's magazine (Física USC). Editing of articles in LaTeX.
           </li>
         </ul>
 
