--- a/webpage/spanish.html
+++ b/webpage/spanish.html
@@ -85,9 +85,10 @@
       <h1 id="projects">Proyectos</h1>
 
         <ul>
-          <li>Astranet: foro para la comunidad de un club de filosofía. 
-            Construído con Discourse (utilizando Docker) y hosteado en un ordenador
-            personal utilizando Cloudflare.
+          <li><a href="https://astranet.clubeastra1.com">Astranet</a>: foro para la 
+            comunidad de un club de filosofía. Construído con 
+            <a href="https://discourse.org">Discourse</a> (utilizando Docker) 
+            y hosteado en un ordenador personal utilizando Cloudflare.
           </li>
 
           <li>
@@ -96,8 +97,8 @@
           </li>
 
           <li>
-            Revista Momentum: revista de la facultad de Física de USC. Edición 
-            y mantenimiento del código de LaTeX
+            <a href="https://github.com/fisicaUSC/revista">Revista Momentum</a>: revista de la facultad de Física de USC. Edición 
+            y mantenimiento del código de LaTeX.
           </li>
         </ul>
 
@@ -151,7 +152,7 @@
             Docker (utlizado en mi homeserver y la Astranet), git y uso de Github (revista Momentum).
           </li>
 
-          <li>LaTeX y Typst (revista Momentum).</li>
+          <li>LaTeX y Typst (revista Momentum y CV en pdf).</li>
 
           <li>Ofimática y uso de Excel.</li>
 
