Fixed some typos and added a hyperlink.

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -59,11 +59,11 @@
 
     <!-- TOPBAR -->
     <div class="topbar">
-      <a href="#" class="link">About me</a>
-      <a href="#" class="link">Projects</a>
-      <a href="#" class="link">Education</a>
-      <a href="#" class="link">Experience</a>
-      <a href="#" class="link">Skills</a>
+      <a href="#about-me" class="link">About me</a>
+      <a href="#projects" class="link">Projects</a>
+      <a href="#education" class="link">Education</a>
+      <a href="#experience" class="link">Experience</a>
+      <a href="#skills" class="link">Skills</a>
       <a href="spanish.html" class="language">Página en español</a>
     </div> 
 
@@ -86,12 +86,12 @@
         <ul>
           <li><a href="https://astranet.clubeastra1.com">Astranet</a>: forum for the community 
             of a Philosophy club. Built on <a href="https://discourse.org">Discourse</a>
-            (using Docker) y hosted on a personal computer using Cloudflare.
+            (using Docker) and hosted on a personal computer using Cloudflare.
           </li>
 
           <li>
-            CV-Webpage: this webpage. Thought as a project to learn web design, HTML
-            and CSS
+            <a href="https://github.com/dcoutogarcia/cv-webpage">CV-Webpage</a>: this webpage. 
+              Thought as a project to learn web design, HTML and CSS
           </li>
 
           <li>
@@ -139,7 +139,7 @@
         </li>
       </ul>
 
-      <h1 id="skills">Habilidades</h1>
+      <h1 id="skills">Skills</h1>
         <ul>
           <li>
             Linux (7 years of experience). Advanced terminal usage. Basic knowledge of 
