--- a/webpage/spanish.html
+++ b/webpage/spanish.html
@@ -92,8 +92,8 @@
           </li>
 
           <li>
-            CV-Webpage: esta página web. Concebida como proyecto para aprender
-            diseño, HTML y CSS.
+            <a href="https://github.com/dcoutogarcia/cv-webpage">CV-Webpage:</a> 
+            esta página web. Concebida como proyecto para aprender diseño, HTML y CSS.
           </li>
 
           <li>
