Added PDF written in Typst.

--- a/webpage/spanish.html
+++ b/webpage/spanish.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,7 +50,7 @@
           <img class="logo" src="media/github.svg" width="25px" alt="Linkedin logo">
         </a>
     
-        <a href="DiegoCouto-CV-ES.pdf" class="logo">
+        <a href="pdf/DiegoCouto-CV-ES.pdf" class="logo">
           <img class="pdf" src="media/pdf.svg" width="25px" alt="PDF"> Descargar PDF
         </a>
       </div>
@@ -93,7 +93,7 @@
 
           <li>
             <a href="https://github.com/dcoutogarcia/cv-webpage">CV-Webpage:</a> 
-            esta página web. Concebida como proyecto para aprender diseño, HTML y CSS.
+            esta página web. Concebida como proyecto para aprender diseño, HTML, CSS y Typst.
           </li>
 
           <li>
