--- a/webpage/index.html
+++ b/webpage/index.html
@@ -50,7 +50,7 @@
           <img class="logo" src="media/github.svg" width="25px" alt="Linkedin logo">
         </a>
     
-        <a href="DiegoCouto-CV-EN.pdf" class="logo">
+        <a href="pdf/DiegoCouto-CV-EN.pdf" class="logo">
           <img class="pdf" src="media/pdf.svg" width="25px" alt="PDF"> Download PDF
         </a>
       </div>
@@ -91,12 +91,12 @@
 
           <li>
             <a href="https://github.com/dcoutogarcia/cv-webpage">CV-Webpage</a>: this webpage. 
-              Thought as a project to learn web design, HTML and CSS
+              Thought as a project to learn web design, HTML, CSS and Typst.
           </li>
 
           <li>
             <a href="https://github.com/fisicaUSC/revista">Momentum Magazine</a>: 
-            faculty's magazine (Física USC). Editing of articles in LaTeX.
+            faculty's magazine (Física USC). Editing articles in LaTeX.
           </li>
         </ul>
 
@@ -150,7 +150,7 @@
             Docker (used in my homeserver an in Astranet), git and Github (Momentum Magazine).
           </li>
 
-          <li>LaTeX and Typst (Momentum Magazine).</li>
+          <li>LaTeX and Typst (Momentum Magazine, Web-CV).</li>
 
           <li>Office and Excel.</li>
 
